Refactor session mgmt, add SC-DAST session mgmt